# orkestra

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  gleam.toml  manifest.toml  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
docs/: mvp-spec.md  technical-spec-gleam.md  technical-spec-python.md  technical-spec.md  ubs-profile.html
migrations/: 0001_initial_schema.rollback.sql  0001_initial_schema.sql
priv/migrations/: 0001_initial_schema.sql
priv/static/css/: input.css  output.css
scripts/: claude-env-setup.sh  seed_dev_data.sql
sql/: create_person.sql  list_instruments.sql  list_sections.sql
src/: orchestra.gleam  orkestra.gleam  sqlgen.gleam
src/app/: __init__.py  config.py  db.py  render.py
src/app/routes/: __init__.py  index.py  members.py
src/app/static/css/: output.css
src/app/templates/: base.html
src/app/templates/members/: list.html
src/app/templates/members/partials/: member_list.html
src/orchestra/: database.gleam  router.gleam
src/orchestra/models/: person.gleam  section.gleam
src/orchestra/pages/: layout.gleam  members.gleam
src/orchestra/web/: members.gleam
src/orkestra/: database.gleam  router.gleam  web.gleam
src/orkestra/lib/: date.gleam  form.gleam  response.gleam
src/orkestra/models/: instrument.gleam  person.gleam  person_filters.gleam  section.gleam
src/orkestra/pages/: layout.gleam  members.gleam
src/orkestra/web/: members.gleam
test/: orchestra_test.gleam  orkestra_test.gleam
test/orkestra/lib/: date_test.gleam  form_test.gleam  response_test.gleam
test/orkestra/models/: person_filters_test.gleam
tests/: conftest.py  test_app.py  test_members.py
