[project]
name = "orchestra"
version = "0.1.0"
description = "Internal member and project management for Uppsala Blåsarsymfoniker"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.9",
    "flask>=3.1.3",
    "itsdangerous>=2.2.0",
    "pytailwindcss>=0.3.0",
    "yoyo-migrations>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "PT",     # flake8-pytest-style
    "TC",     # flake8-type-checking
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "D",      # pydocstyle
    "N",      # pep8-naming
    "S",      # flake8-bandit
    "DTZ",    # flake8-datetimez
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "T20",    # flake8-print
    "FLY",    # flynt
    "PERF",   # perflint
    "FURB",   # refurb
    "ERA",    # eradicate
    "TRY",    # tryceratops
    "FBT",    # flake8-boolean-trap
    "A",      # flake8-builtins
    "BLE",    # flake8-blind-except
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "SLF",    # flake8-self
    "PTH",    # flake8-use-pathlib
    "PGH",    # pygrep-hooks
    "YTT",    # flake8-2020
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "INP",    # flake8-no-pep420
    "RSE",    # flake8-raise
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "TD",     # flake8-todos
    "PL",     # pylint
]
ignore = [
    "D100",   # missing docstring in public module
    "D101",   # missing docstring in public class
    "D102",   # missing docstring in public method
    "D103",   # missing docstring in public function
    "D104",   # missing docstring in public package
    "D105",   # missing docstring in magic method
    "D106",   # missing docstring in public nested class
    "D107",   # missing docstring in __init__
    "PLR2004", # magic value comparison — too noisy in tests and HTTP status checks
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
